# BookCataloguer

./: README.md  pyproject.toml
notebooks/: frame_extraction.ipynb
